 (github issue #442)
- Issue445: provide helper functions for multithreaded evaluation of some expensive functions
 (github issue #448)
- Support a confId argument to the atom pair fingerprinting code
 (github issue #453)
- Cartridge: Support converting no structs to InChI
 (github issue #455)
 
New Database Cartridge Features: 

New Java Wrapper Features:

Deprecated modules (to be removed in next release):
- C++: The functionality in $RDBASE/Code/GraphMol/MolDrawing has been
  superseded by the new drawing code in $RDBASE/Code/GraphMol and will
  be removed in the next release.
- rdkit/Dbase/Pubmed

Removed modules:

Contrib updates:

Other:

******  Release_2014.09.2 *******
(Changes relative to Release_2014.09.1)

Acknowledgements:
Sereina Riniker, Nadine Schneider, Paolo Tosco

Bug Fixes:
- SMILES parser doing the wrong thing for odd dot-disconnected construct
 (github issue #378)
- O3A code generating incorrect results for multiconformer molecules
 (github issue #385)
- Suppliers probably not safe to read really large files
 (github issue #392)
- Torsion constraints not worrking properly for negative torsions
 (github issue #393)
- Core leak in reactions
 (github issue #396)


******  Release_2014.09.1 *******
(Changes relative to Release_2014.03.1)

Acknowledgements:
Andrew Dalke, James Davidson, Jan Domanski, Patrick Fuller, Seiji
Matsuoka, Noel O'Boyle, Sereina Riniker, Alexander Savelyev, Roger
Sayle, Nadine Schneider, Matt Swain, Paolo Tosco, Riccardo Vianello,
Richard West

Bug Fixes:
- Bond query information not written to CTAB
 (github issue #266)
- Bond topology queries not written to CTABs
 (github issue #268)
- Combined bond query + topology query not correctly parsed from CTAB
 (github issue #269)
- SWIG wrapped suppliers leak memory on .next()
 (github issue #270)
- SWIG wrappers don't build with SWIG 3.0.x
 (github issue #277)
- core leak from DataStructs.ConvertToNumpyArray
 (github issue #281)
- MolTransforms not exposed to Java wrapper